# odoo-mcp-server

./: README.md  odoo_mcp_server.py  pyproject.toml  server.json
.github/workflows/: publish.yml
